                  `allowNets` in user object.
          o SQL: IP addresses or networks must be listed in SQL column
                  `mailbox.allow_nets`.

        - Bypass greylisting for some big ISPs
          (samples/cluebringer/greylisting-whitelist.sql).
        - Setup Fail2ban to monitor SOGo log file.
        - Add two new Fail2ban filters to help catch spam.

    * Fixed issues:
        - Incorrect log file and owner/group in /etc/logrotate.d/policyd.
        - Cannot send email to user+ext@domain.com when per-domain catch-all
          is enabled. Note: not fixed with LDAP backend yet.
        - Cannot send mail with Roundcube and PHP 5.6.
        - Cannot run PHP scripts under web document root with Nginx.
        - Not use user's identity as envelope sender for 'return receipt'
          responses.
        - Not backup SOGo SQL database.
        - Incorrect path of command 'sogo-tool' on OpenBSD.
        - Not apply service restriction in Dovecot SQL query file while acting
          as SASL server.

    * Updated packages:
        + Roundcube webmail -> 1.1.1
        + uwsgi -> 2.0.9. OpenBSD only.

iRedMail-0.9.0:
    * Works on new distribution releases:
        - RHEL/CentOS 7
        - Ubuntu 14.10 (codename: utopic)
        - OpenBSD 5.6. Note: Nginx is used as web server, the new built-in
          httpd daemon (not Apache-1.3) is not used.

    * SOGo groupware integration:

      SOGo groupware provides a rich AJAX-based Web interface and supports
      multiple native clients through the use of standard protocols such as
      CalDAV, CardDAV and GroupDAV, as well as Microsoft ActiveSync.
      Check its website for more details: http://sogo.nu/

      Important notes of SOGo integration in iRedMail:

      o SOGo integration is available on below Linux distributions and releases:

        - RHEL/CentOS 6. SOGo project doesn't provide RPMs for CentOS 7 yet.
        - Debian 7.